# ann

./: CNAME  README.md
.github/workflows/: rust.yml
rust/: Cargo.toml
rust/proto/: Cargo.toml  build.rs
rust/proto/src/: flwr.rs  lib.rs
rust/protocol/: Cargo.toml  build.rs
rust/protocol/src/: flwr.rs  lib.rs  ws_messages.rs
rust/proxy/: Cargo.toml
rust/proxy/src/: logic.rs  main.rs  setup.rs
rust/ui/: Cargo.toml  index.html  package.json  styling.scss  trunk.toml
rust/ui/src/: app.rs  lib.rs  main.rs
rust/ui/src/components/: network.rs  storage.rs
rust/ui/src/logic/: at_client.rs  flower_client.rs  mod.rs  storage.rs
rust/ui/src/logic/model/: bert.rs  client.rs  mod.rs  training.rs
rust/ui/src/typescript/: lib.ts
rust/ui/src/view/: README.md  app.rs
rust/ui/src/view/components/: mod.rs  navbar.rs  network.rs  storage.rs  worker.rs  workers.rs
rust/ui/src/view/pages/: home.rs  label.rs  mod.rs
server/: pyproject.toml
