[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3.30"
headers = "0.4.0"
prost = "0.12.6"
protocol = {path = "../protocol/", features= ["grpc"]}
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.23.0"
tonic = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
