[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo-console = "0.3.0"
gloo-worker = { version = "0.5.0", features = ["futures"] }
idb = "0.6.1"
leptos = { version = "0.6.12", features = ["csr"] }
leptos-use = "0.10.10"
serde = "1.0.203"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
