[package]
name = "ui"
version = "0.1.0"
edition = "2021"
[lib]
name = "components"
path = "src/components/mod.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-worker = { version = "0.5.0", features = ["futures"] }
idb = "0.6.1"
leptos = { version = "0.6.12", features = ["csr"] }
leptos-use = "0.10.10"
serde = "1.0.203"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
