[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = {path = "../protocol/"}

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-worker = { version = "0.5.0", features = ["futures"] }
idb = "0.6.1"
leptos = { version = "0.6.12", features = ["csr"] }
# leptos-use = "0.10.10"
# num-traits = "0.2.19"
# safetensors = "0.4.3"
serde = "1.0.203"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
tokenizers = { version = "0.19.1", features = ["unstable_wasm"], default-features = false }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.43"
leptos-use = "0.13.5"
codee = { version = "0.2.0", features = ["msgpack_serde"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
js-sys = "0.3.72"
